# codecrafters-http-server-rust

./: Cargo.toml  README.md
src/: client.rs  encoding.rs  error.rs  fileops.rs  headers.rs  main.rs  request.rs
